force-app/main/default/objects/Application__c/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <description>From Application</description>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Development</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Public Improvements</fullName>
                <label>Public Improvements or Facility Activity</label>
            </value>
            <value>
                <fullName>Public Services</fullName>
            </value>
            <value>
                <fullName>Tornado</fullName>
                <label>Tornado Disaster Recovery</label>
            </value>
            <value>
                <fullName>General Administration</fullName>
            </value>
            <value>
                <fullName>Neighborhood Health Essentials</fullName>
                <isActive>false</isActive>
                <label>Neighborhood Health Essentials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>