force-app/main/default/objects/Application__c/fields/Application_Returned__c.field-meta.xml
<CustomField>
    <fullName>Application_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Returned</label>
    <type>Checkbox</type>
</CustomField>