force-app/main/default/objects/Application__c/fields/Block_Submit__c.field-meta.xml
<CustomField>
    <fullName>Block_Submit__c</fullName>
    <formula>NOT(Budget_Match__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Submit</label>
    <type>Checkbox</type>
</CustomField>