force-app/main/default/objects/Application__c/fields/Block_Submit_Message__c.field-meta.xml
<CustomField>
    <fullName>Block_Submit_Message__c</fullName>
    <description>Revenue and Expense budget amounts must match. Please update you budgets to submit.</description>
    <label>Block_Submit_Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>