force-app/main/default/objects/Application__c/fields/Budget_Match__c.field-meta.xml
<CustomField>
    <fullName>Budget_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked when the revenue and expense budgets Match, and unchecked when they do not match. This field is then used in a formula field to prevent submission when budgets do not match. Update logic is performed in the Application_Budget_Display flow.</description>
    <inlineHelpText>Box is checked when the revenue and expense budgets Match, and unchecked when they do not match.</inlineHelpText>
    <label>Budget Match</label>
    <type>Checkbox</type>
</CustomField>