force-app/main/default/objects/Application__c/fields/CDA_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>CDA_Review_Status__c</fullName>
    <label>CDA Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completeness Review Started</fullName>
            </value>
            <value>
                <fullName>Completeness Review Finished-accepted</fullName>
                <label>Completeness Review Finished-Accepted</label>
            </value>
            <value>
                <fullName>Completeness Review Finished - Rejected</fullName>
            </value>
            <value>
                <fullName>Completeness Review Finished</fullName>
                <isActive>false</isActive>
                <label>Completeness Review Finished</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>