force-app/main/default/objects/Application__c/fields/Created_By_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email_Address__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Email Address</label>
    <type>Text</type>
</CustomField>