force-app/main/default/objects/Application__c/fields/Eligible_Activity__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Activity__c</fullName>
    <description>pulled from Application</description>
    <label>Eligible Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Microenterprise Assistance / Incubator Assistance Program</fullName>
            </value>
            <value>
                <fullName>Bus. Attraction/Fin. Incentives Food Access</fullName>
            </value>
            <value>
                <fullName>Bus. Development</fullName>
            </value>
            <value>
                <fullName>Child Care; Crime Prevention; Elderly</fullName>
            </value>
            <value>
                <fullName>Fair Housing; Financial Literacy/Financial Counseling</fullName>
            </value>
            <value>
                <fullName>Food Access; Health; Homeless/At-Risk Homeless</fullName>
            </value>
            <value>
                <fullName>Job Training</fullName>
            </value>
            <value>
                <fullName>Landlord Training Assistance Program</fullName>
            </value>
            <value>
                <fullName>Neighborhood Cleanups and Beautification</fullName>
            </value>
            <value>
                <fullName>Offender Reentry Services</fullName>
            </value>
            <value>
                <fullName>Resident Leadership Training and Development (1)</fullName>
            </value>
            <value>
                <fullName>Resident Leadership Training and Development (2)</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Early Childhood Education Centers</fullName>
            </value>
            <value>
                <fullName>Street and Sidewalk Improvements</fullName>
            </value>
            <value>
                <fullName>CDBG Broadband Infrastructure</fullName>
            </value>
            <value>
                <fullName>CDBG-Eligible Public Facilities</fullName>
            </value>
            <value>
                <fullName>Healthy Home Repair Construction Management</fullName>
            </value>
            <value>
                <fullName>Low/Mod Homebuyer Assistance Program</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency, Weatherization and Accessibility</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Services</fullName>
            </value>
            <value>
                <fullName>Urban Agriculture</fullName>
            </value>
            <value>
                <fullName>Food Production</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>Food Distribution</fullName>
            </value>
            <value>
                <fullName>Other Health Related Services</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Program Administration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>