force-app/main/default/objects/Application__c/fields/Grant_Funds_Requested__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funds_Requested__c</fullName>
    <formula>Project__r.Grant_Funds_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Funds Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>