force-app/main/default/objects/Application__c/fields/National_Objective__c.field-meta.xml
<CustomField>
    <fullName>National_Objective__c</fullName>
    <description>Pulled from Application</description>
    <label>National Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a. Benefit to LMI Individuals/limited clientele (at least 51% of beneficiaries must be LMI)</fullName>
            </value>
            <value>
                <fullName>b. Benefit to LMI households for housing (100% of beneficiaries must be at or below 80% of median family income for City, as determined by HUD, for single family units)</fullName>
            </value>
            <value>
                <fullName>c. Benefit to LMI individuals/jobs creation or retention (at least 51% of jobs must be taken by or made available to LMI persons)</fullName>
            </value>
            <value>
                <fullName>d. Benefits of services available to all residents in an area that is primarily residential and is located in an eligible LMI census tract(s). (Not applicable to Housing activities)</fullName>
            </value>
            <value>
                <fullName>e. Prevent or eliminate slum and blight on an area basis</fullName>
            </value>
            <value>
                <fullName>f. Prevent or eliminate slum and blight on a spot basis (applicable only for public facilities and improvements)</fullName>
            </value>
            <value>
                <fullName>Low/Mod Assumption (Administrative Categories Only)</fullName>
                <label>g. Low/Mod Assumption (Administrative Categories Only)</label>
            </value>
            <value>
                <fullName>h. Urgent Need (applicable only for Tornado disaster recovery)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>