force-app/main/default/objects/Application__c/fields/Project_Cost_Match__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Cost Match</label>
    <type>Checkbox</type>
</CustomField>