force-app/main/default/objects/Application__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <formula>OR(
   $Profile.Name = &quot;STL CDA Internal Grant Admin&quot;,
   AND(
   NOT(
   AND(
   Application_Returned__c = TRUE,
   TEXT(Status__c) &lt;&gt; &quot;Submitted&quot;
      )
      ),
   OR(
      TEXT(Status__c) = &quot;Submitted&quot;,
      TODAY() &gt; DATEVALUE(Reference_Application__r.End_Date__c)
      )
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>