force-app/main/default/objects/Application__c/fields/Score_Summary__c.field-meta.xml
<CustomField>
    <fullName>Score_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This record is created when the raters are assigned.  It holds the related summaries of scroing for each rater when they are complete.</inlineHelpText>
    <label>Rating Summary</label>
    <referenceTo>Score_Summary__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>