force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Reference_Application__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_By_Email_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All (internal)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>