force-app/main/default/objects/Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Display_Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>