force-app/main/default/objects/Application__c/listViews/My_Applications.listView-meta.xml
<ListView>
    <fullName>My_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Display_Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Applications</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>