force-app/main/default/objects/Application__c/listViews/Submitted_with_email_addresses.listView-meta.xml
<ListView>
    <fullName>Submitted_with_email_addresses</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Reference_Application__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_By_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted (with email addresses)</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CDA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>