force-app/main/default/objects/Application__c/listViews/X2025_Applications.listView-meta.xml
<ListView>
    <fullName>X2025_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/13/2025 12:00 AM</value>
    </filters>
    <label>2025 Applications</label>
</ListView>