force-app/main/default/objects/Application__c/listViews/X2025_CDG_Applications.listView-meta.xml
<ListView>
    <fullName>X2025_CDG_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Display_Name__c</field>
        <operation>equals</operation>
        <value>Community Development Grant</value>
    </filters>
    <label>2025 CDG Applications</label>
</ListView>