force-app/main/default/objects/Application__c/listViews/X2025_For_Sale_Housing_Applications.listView-meta.xml
<ListView>
    <fullName>X2025_For_Sale_Housing_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Display_Name__c</field>
        <operation>equals</operation>
        <value>For-Sale Housing Production Programs</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/14/2025 12:00 AM</value>
    </filters>
    <label>2025 For-Sale Housing Applications</label>
</ListView>