force-app/main/default/objects/Application__c/listViews/X2025_HOME_ARP_Supportive_services.listView-meta.xml
<ListView>
    <fullName>X2025_HOME_ARP_Supportive_services</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_By_Email_Address__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Display_Name__c</field>
        <operation>equals</operation>
        <value>HOME-ARP Supportive Services</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>12/31/2025 12:00 AM</value>
    </filters>
    <label>2025 HOME-ARP Supportive services</label>
</ListView>