force-app/main/default/objects/Application__c/listViews/X2025_Neighborhood_Plan_Implementation.listView-meta.xml
<ListView>
    <fullName>X2025_Neighborhood_Plan_Implementation</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Display_Name__c</field>
        <operation>equals</operation>
        <value>Neighborhood Plan Implementation</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,In Progress</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>greaterOrEqual</operation>
        <value>03/14/2025</value>
    </filters>
    <label>2025 Neighborhood Plan Implementation</label>
</ListView>